fix layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,31 @@
 body {
     background-color: #f5f5f5;
 }
+
+html,
+body {
+    overflow-x: hidden;
+
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background   : #f5f5f5;
+    box-shadow   : inset 0 0 4px rgb(195, 194, 194);
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background   : #1266dd;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #0036fa;
+}
